FinalProject/force-app/main/default/objects/TaskProject__c/TaskProject__c.object-meta.xml
<CustomObject>
    <label>TaskProject</label>
    <nameField>
        <label>TaskProject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TaskProjects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>