FinalProject/force-app/main/default/objects/TaskProject__c/fields/AmountToPay__c.field-meta.xml
<CustomField>
    <fullName>AmountToPay__c</fullName>
    <formula>ProjectResource__r.Resource__r.RatePerHour__c *  RegisterHours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AmountToPay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>