FinalProject/force-app/main/default/objects/TaskProject__c/fields/EndTask__c.field-meta.xml
<CustomField>
    <fullName>EndTask__c</fullName>
    <label>EndTask</label>
    <required>true</required>
    <type>Date</type>
</CustomField>