FinalProject/force-app/main/default/objects/TaskProject__c/fields/EstimatedHours__c.field-meta.xml
<CustomField>
    <fullName>EstimatedHours__c</fullName>
    <formula>(((5 * ( FLOOR( ( EndTask__c  - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( EndTask__c - DATE( 1900, 1, 8), 7 ) ) )
-
(5 * ( FLOOR( ( StartTask__c  - DATE( 1900, 1, 8) ) / 7 ) ) + MIN( 5, MOD( StartTask__c - DATE( 1900, 1, 8), 7 ) ) )) + 1) * 8</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EstimatedHours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>