FinalProject/force-app/main/default/objects/TaskProject__c/fields/InProgress__c.field-meta.xml
<CustomField>
    <fullName>InProgress__c</fullName>
    <formula>IF(ISPICKVAL(Status__c,&apos;In Progress&apos;), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InProgress</label>
    <type>Checkbox</type>
</CustomField>