FinalProject/force-app/main/default/objects/TaskProject__c/fields/InsertHs__c.field-meta.xml
<CustomField>
    <fullName>InsertHs__c</fullName>
    <label>InsertHs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>