FinalProject/force-app/main/default/objects/TaskProject__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <formula>CASESAFEID(ProjectResource__r.ProjectLineItem__r.Project__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project</label>
    <type>Text</type>
</CustomField>