FinalProject/force-app/main/default/objects/TaskProject__c/fields/ProjectResource__c.field-meta.xml
<CustomField>
    <fullName>ProjectResource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ProjectResource</label>
    <referenceTo>ProjectResource__c</referenceTo>
    <relationshipLabel>TaskProjects</relationshipLabel>
    <relationshipName>TaskProjects</relationshipName>
    <type>Lookup</type>
</CustomField>