FinalProject/force-app/main/default/objects/TaskProject__c/fields/RegisterHours__c.field-meta.xml
<CustomField>
    <fullName>RegisterHours__c</fullName>
    <defaultValue>0</defaultValue>
    <label>RegisterHours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>