FinalProject/force-app/main/default/objects/TaskProject__c/fields/StartTask__c.field-meta.xml
<CustomField>
    <fullName>StartTask__c</fullName>
    <label>StartTask</label>
    <required>true</required>
    <type>Date</type>
</CustomField>