FinalProject/force-app/main/default/objects/TaskProject__c/validationRules/OnlySquadLead.validationRule-meta.xml
<ValidationRule>
    <fullName>OnlySquadLead</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISNEW() &amp;&amp;  CASESAFEID($User.Id)!= CASESAFEID( ProjectResource__r.ProjectLineItem__r.Project__r.SquadLeadId__c )   , true, false)</errorConditionFormula>
    <errorMessage>Only Squad Lead can be assign a task</errorMessage>
</ValidationRule>