FinalProject/force-app/main/default/objects/TaskProject__c/validationRules/ProjectNotInProgress.validationRule-meta.xml
<ValidationRule>
    <fullName>ProjectNotInProgress</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISNEW() &amp;&amp;  ISPICKVAL(ProjectResource__r.ProjectLineItem__r.Project__r.Status__c, &apos;In Progress&apos;) , false, true)</errorConditionFormula>
    <errorMessage>Tasks cannot be created if the project status is other than In Progress</errorMessage>
</ValidationRule>